2009-08-03  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c
	(transfer_msgs_thread_clean): removed invalid code

	* camel/providers/imap/camel-imap-folder.c
	(process_idle_untagged_response): fixed a small memory leak

2009-07-30  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-folder.c
	(idle_thread): loop while the store->idle_thread is not assigned, to
	avoid unexpected behavior for not being able to detect if we're
	starting or stopping idle from idle thread.

2009-07-27  Javier Jardon  <javierjc11982@gmail.com>

	* tests/c-demo/tny-demoui-summary-view.c (recursive_all_folders):
	* libtinymailui-mozembed/tny-moz-embed-msg-view.c
	(tny_moz_embed_msg_view_create_mime_part_view_for_default):
	removed some Gtk+ deprecated symbols

2009-07-27  Jose Dapena Paz  <jdapena@igalia.com>

	Avoid a crash iterating in imap summary if it's corrupted.

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-folder.c
	(imap_update_summary): if summary is bigger than the sequence number
	coming from server, summary is corrupt. We were iterating wrongly to
	remove the extra elements, and could cause a crash.

	* libtinymail-camel/tny-camel-folder.c (folder_tracking_changed):
	reimplemented to load the summary when we get a folder changed
	event from camel, and use the standard folder_changed handler.
	Avoids crashes if the camel folder is freed earlier than
	folder changed handling finishes.

2009-07-27  Lucas Maneos <tinymail@subs.maneos.org>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.c:
	avoid sending an empty ENABLE command when the IMAP server's
	CAPABILITY response does not list any supported extensions.

2009-07-20  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymailui-gtk/tny-gtk-folder-list-store.c (get_parent_full_name):
	there was a reference leak in this method, as the recursion for
	getting the list of all parents was not properly freeing the