@@ -1,3 +1,11 @@
+2009-08-05  Sergio Villar Senin  <svillar@igalia.com>
+
+	* libtinymail/tny-fs-stream-cache.c (fill_from_cache): fixed a
+	memory leak.
+
+	* libtinymail-camel/tny-camel-folder.c
+	(transfer_msgs_thread_clean): clear exception to prevent memory leaks.
+
 2009-08-03  Sergio Villar Senin  <svillar@igalia.com>
 
 	* libtinymail-camel/tny-camel-folder.c
